@startuml
'https://plantuml.com/class-diagram

title "As a Buyer, I want to get the list of items on direct sale of a given author" CD

'==== basic style ====
skinparam monochrome false
skinparam shadowing false
skinparam defaultFontName Futura
skinparam objectFontSize 20
skinparam backgroundColor CornSilk
skinparam objectBackgroundColor WhiteSmoke
skinparam noteBackgroundColor #FFFFE0
skinparam ArrowFontColor #3B4953
skinparam ActivationBackgroundColor black
skinparam classAttributeIconSize 0

class GetDirectSaleItemsByAuthorUI{}

package "controller" {
    class GetDirectSaleItemsByAuthorController {
        +getDirectSaleItemsByAuthorId(authorId: AuthorId): List<ItemId>
        +findAllKeys() : List<AuthorId>
    }
}

package "ddd" {
    interface IRepository<ID, T> <<Interface>>
}

package "domain" {
    package "repository" {
        interface IAuthorRepo <<Interface>> {
            +findAllKeys() : List<AuthorId>
        }
        interface IDirectSaleRepo <<Interface>> {
            +findAll() : Iterable<DirectSale>
        }
        interface IItemRepo <<Interface>> {
            +ofIdentity(id : ItemId) : Optional<Item>
        }
        interface IEditionRepo <<Interface>> {
            +ofIdentity(id : EditionId) : Optional<Edition>
        }
        interface IPublicationRepo <<Interface>> {
            +ofIdentity(publicationId : PublicationId) : Optional<Publication>
        }
    }

    package "valueobject" {
        class AuthorId <<Value Object>>
        class ItemId <<Value Object>>
        class EditionId <<Value Object>>
        class PublicationId <<Value Object>>
    }

    package "directsale" #b0c4d4 {
        class DirectSale <<Root>> <<Entity>> {
            getItemsId() : List<ItemId>
        }
    }

    package "item" {
        class Item <<Root>> <<Entity>> {
            +getEditionId() : EditionId
        }
    }

    package "edition" {
        class Edition <<Root>> <<Entity>> {
            +getPublicationId() : PublicationId
        }
    }

    package "publication" {
        class Publication <<Root>> <<Entity>> {
            +isByAuthorId(authorId : AuthorId) : boolean
        }
    }
}

GetDirectSaleItemsByAuthorUI "1".>"1" GetDirectSaleItemsByAuthorController : invokes

GetDirectSaleItemsByAuthorController "1" ..> "1" IDirectSaleRepo : <<use>>
GetDirectSaleItemsByAuthorController "1" ..> "1" IItemRepo : <<use>>
GetDirectSaleItemsByAuthorController "1" ..> "1" IEditionRepo : <<use>>
GetDirectSaleItemsByAuthorController "1" ..> "1" IPublicationRepo : <<use>>
GetDirectSaleItemsByAuthorController "1" ..> "1" IAuthorRepo : <<use>>

IDirectSaleRepo --|> IRepository
IItemRepo --|> IRepository
IEditionRepo --|> IRepository
IPublicationRepo --|> IRepository
IAuthorRepo --|> IRepository

IDirectSaleRepo "1" --> "*" DirectSale : manages
IItemRepo "1" --> "*" Item : manages
IEditionRepo "1" --> "*" Edition : manages
IPublicationRepo "1" --> "*" Publication : manages

DirectSale "1" o-- "1..*" ItemId : aggregates
Item "1" --> "1" EditionId : has
Item "1" --> "1" ItemId : has
Edition "1" --> "1" PublicationId : has
Edition "1" --> "1" EditionId : has
Publication "1" --> "1" AuthorId : has
Publication "1" --> "1" PublicationId : has

@enduml